# Insight-Agent

./: .gitignore  README.md  start.bat
backend/: .env.example  pyproject.toml
backend/app/: llm.py  main.py  models.py  react_agent.py  routes.py  run_manager.py  storage.py  text.py
backend/app/collectors/: __init__.py  _agent_browser.py  amazon.py  base.py  json_upload.py  reddit.py  registry.py  scraper.py  youtube.py
backend/tests/: test_collectors_registry.py  test_json_upload_collector.py  test_llm.py  test_react_agent.py  test_scraper_collector.py  test_storage.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: BarRank.tsx  Donut.tsx  Icon.tsx  KpiCard.tsx  ProgressBar.tsx  StatusBadge.tsx  TraceTimeline.tsx
frontend/src/lib/: aspectTranslations.ts  categories.ts  i18n.tsx  insights.ts  sources.ts
frontend/src/pages/: CreateRun.tsx  Report.tsx  RunDetail.tsx  RunsList.tsx
sample_data/: macbook_sample.json  wireless_earbuds_sample.json
