[project]
name = "reddit-insight-agent"
version = "0.1.0"
description = "ReAct agent that mines Reddit for product feedback and reports it to merchants"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "praw>=7.7",
    "requests>=2.31",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
